Fixed horizontal overflow of long words

--- a/client/src/style.css
+++ b/client/src/style.css
@@ -34,6 +34,7 @@ body::-webkit-scrollbar {
     padding: 0.5rem;
     border-radius: 0.5rem;
     margin-bottom: 0.5rem;
+    overflow-wrap: break-word;
 }
 
 .Sent > .Message {
